      - Maintainer address is again myself instead of Alioth mailing list.
      - Bumped Standards-Version to 4.1.3, no changes needed.
      - Priority for 'cupt-dbg' is changed to 'optional', as suggested by
        lintian.
    - compat:
      - Bumped to 9.
    - source/format:
      - Introduced, with "3.0 (native)".
    - rules:
      - Pass '--parallel' after dh sequence name.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 30 Mar 2018 20:08:30 +0200

cupt (2.10.0) unstable; urgency=low

  * console:
    - New positional action override option '--reinstall'.
    - Action preview prompt: removed printing "(a)" suffix for removed/purged
      automatically installed packages. Instead, introduced all-action
      package indicators: "{m}" for manually installed packages, "{a}" for
      automatically installed ones. Those 2 affect only non-color output mode.
      Only "{m}" is enabled by default.
    - Action preview prompt: fixed an internal error on showing versions for
      to-be-purged removed packages.
    - Action preview prompt: warn (by default) when removing important
      packages (the ones marked as 'Important: yes').
    - Action preview prompt: fixed showing broken installed packages as to
      be reinstalled if an user prevented their automatic
      removal/reinstallation.
    - Package action modifier suffixes '+' and '-' are now deprecated.
      They still work (for now) but produce a warning when used.
    - 'shell':
      - Don't rebuild the cache when the last action required less cache
        parts than the current one, but all needed parts were loaded before.
      - Don't rebuild the cache if simulation is on.
      - Replaced argument parsing algorithm from a shell invocation to a
        simple word parser (simple one-level shell quotes still allowed).
      - 'version' and 'help' commands now work also here.
    - 'dist-upgrade':
      - Do not apply positional arguments on the first stage (when upgrading